@@ -1,2 +1,0 @@
-Pyphen is a pure Python module to hyphenate text using existing
-Hunspell hyphenation dictionaries.
