@@ -1,76 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1 2021/04/29 23:39:14 joerg Exp $
-${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
-${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
-${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
-${PYSITELIB}/${EGG_INFODIR}/not-zip-safe
-${PYSITELIB}/${EGG_INFODIR}/top_level.txt
-${PYSITELIB}/pyphen/__init__.py
-${PYSITELIB}/pyphen/__init__.pyc
-${PYSITELIB}/pyphen/__init__.pyo
-${PYSITELIB}/pyphen/dictionaries/hyph_af.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_af_ZA.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_bg.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_bg_BG.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_ca.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_cs.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_cs_CZ.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_da.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_da_DK.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_de.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_de_AT.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_de_CH.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_de_DE.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_el.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_el_GR.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_en.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_en_GB.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_en_Latn_GB.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_en_Latn_US.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_en_US.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_es.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_et.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_et_EE.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_fr.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_gl.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_hr.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_hr_HR.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_hu.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_hu_HU.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_id_ID.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_is.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_it.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_it_IT.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_lt.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_lt_LT.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_lv.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_lv_LV.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_nb.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_nb_NO.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_nl.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_nl_NL.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_nn.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_nn_NO.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_pl.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_pl_PL.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_pt.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_pt_BR.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_pt_Latn_BR.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_pt_Latn_PT.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_pt_PT.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_ro.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_ro_RO.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_ru.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_ru_RU.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_sk.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_sk_SK.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_sl.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_sl_SI.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_sr.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_sr_Latn.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_sv.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_te.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_te_IN.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_uk.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_uk_UA.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_zu.dic
-${PYSITELIB}/pyphen/dictionaries/hyph_zu_ZA.dic
