@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2024,v 1.2895 2024/04/30 08:30:41 wiz Exp $
+$NetBSD: CHANGES-2024,v 1.2896 2024/04/30 08:35:56 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2024:
 
@@ -4726,3 +4726,4 @@ Changes to the packages collection and infrastructure in 2024:
 	Updated graphics/py-cairocffi to 1.7.0 [wiz 2024-04-30]
 	Removed textproc/py27-cssselect2 [wiz 2024-04-30]
 	Removed textproc/py27-tinycss2 [wiz 2024-04-30]
+	Removed textproc/py27-pyphen [wiz 2024-04-30]
